--- a/client/bower.json
+++ b/client/bower.json
@@ -2,7 +2,7 @@
   "name": "tbs-www",
   "private": true,
   "dependencies": {
-    "bootstrap-sass-official": "~3.3.1",
-    "modernizr": "~2.8.1"
+    "modernizr": "~2.8.1",
+    "angular-material": "~0.9.7"
   }
 }
