--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gulp-csso": "^1.0.0",
     "gulp-if": "^1.2.5",
     "gulp-load-plugins": "*",
-    "gulp-minify-html": "^1.0.2",
+    "gulp-minify-html": "^1.0.3",
     "gulp-newer": "^0.5.0",
     "gulp-postcss": "^5.1.8",
     "gulp-sass": "^2.0.1",
@@ -22,7 +22,8 @@
     "gulp-util": "^3.0.5",
     "main-bower-files": "^2.8.0",
     "nodemon": "^1.3.7",
-    "request": "^2.56.0",
+    "request": "^2.57.0",
+    "wiredep": "^2.2.2",
     "yargs": "^3.10.0"
   },
   "dependencies": {
