--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "yargs": "^3.10.0"
   },
   "dependencies": {
+    "angular": "^1.4.0",
+    "angular-animate": "^1.4.0",
+    "angular-aria": "^1.4.0",
+    "angular-material": "^0.9.7",
     "express": "^4.12.4"
   }
 }
